plugins {
    id 'java-library'
    id 'org.javamodularity.moduleplugin' version '1.7.0'
    id 'eclipse'
}

sourceCompatibility = 14
targetCompatibility = 14

repositories {
    jcenter()
}

dependencies {
	implementation 'org.ow2.asm:asm:8.0.1'
	
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

eclipse.classpath.file {
    whenMerged {
        // All libraries except JUnit to module path (Eclipse+Gradle support for JPMS is garbage)
        entries.findAll { it.kind == 'lib' && !it.sourcePath.path.contains('junit') }.each { it.entryAttributes['module'] = 'true' }
    }
}

test {
    moduleOptions {
        runOnClasspath = true
    }
}